--- a/.github/workflows/ci-cache.yml
+++ b/.github/workflows/ci-cache.yml
@@ -8,11 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3.0.2
+        uses: actions/checkout@v5
 
-      - uses: actions/setup-node@v3.1.1
+      - uses: actions/setup-node@v6
         with:
-          node-version: v16.14.2
+          node-version: 24
           cache: 'yarn'
           # Useful for caching dependencies in monorepos:
           cache-dependency-path: yarn.lock
