--- a/.github/workflows/ci-cache-advance.yml
+++ b/.github/workflows/ci-cache-advance.yml
@@ -8,11 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3.0.2
+        uses: actions/checkout@v5
 
-      - uses: actions/setup-node@v3.1.1
+      - uses: actions/setup-node@v6
         with:
-          node-version: v16.14.2
+          node-version: 24
 
       - name: Get node version
         id: node
@@ -20,7 +20,7 @@ jobs:
           echo "::set-output name=version::$(node -v)"
 
       - name: Get node_modules cache
-        uses: actions/cache@v3.0.2
+        uses: actions/cache@v4
         id: node_modules
         with:
           path: |
